# stock-spreadsheet-generator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
src/: config.rs  main.rs  yahoo.rs
