[package]
name = "stock_spreadsheet_generator"
description = "Creates a simple spreadsheet based on yahoo finance data"
version = "0.6.0"
authors = ["marcus8448"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/marcus8448/stock_spreadsheet_generator/"
license = "MIT"

[dependencies]
clap = "4.0"
csv = "1.1"
open = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.26", features = ["serde_json"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1" }

[profile.release]
strip = true
