[package]
name = "stock-spreadsheet-generator"
description = "Creates a spreadsheet based on yahoo finance data"
version = "0.7.2"
authors = ["marcus8448"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/marcus8448/stock_spreadsheet_generator/"
license = "MIT"

[dependencies]
clap = "4"
csv = "1.3"
env_logger = "0.11"
log = "0.4.21"
open = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "default-tls"] }
rust_decimal = { version = "1.34", features = ["serde_json"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1" }

[profile.release]
strip = true
